clusters/cl01tl/manifests/kube-prometheus-stack/HTTPRoute-http-route-alertmanager.yaml
---
# Source: kube-prometheus-stack/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-alertmanager
  namespace: kube-prometheus-stack
  labels:
    app.kubernetes.io/name: http-route-alertmanager
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/part-of: kube-prometheus-stack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - alertmanager.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-alertmanager
          port: 9093
          weight: 100
